--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <script src="./script.js" type="module"></script>
+    <script src="./script.js" type="module" defer></script>
+    <link rel="stylesheet" href="./style.css">
     <title>Rock, Paper, and Scissors | Odin</title>
   </head>
 </html>
