--- a/index.html
+++ b/index.html
@@ -6,4 +6,45 @@
     <link rel="stylesheet" href="./style.css">
     <title>Rock, Paper, and Scissors | Odin</title>
   </head>
+  <body>
+    <h2 class="winner-indicator computer">🎉 Computer Wins!</h2>
+    <h1 class="player-tag">Computer</h1>
+    <div class="hand-container computer-hand">
+      <button class="hand-button" id="computer-scissors">
+        ✂️
+      </button>
+      <button class="hand-button" id="computer-rock">
+        🪨
+      </button>
+      <button class="hand-button" id="computer-paper">
+        📃
+      </button>
+    </div>
+    <div class="score-indicator computer">
+      <h2>Score</h2>
+      <h2 class="score computer">00</h2>
+    </div>
+
+
+    <h1 class="vs-text">VS.</h1>
+
+    <h2 class="winner-indicator human">🎉 Human Wins!</h2>
+    
+    <h1 class="player-tag">Human</h1>
+    <div class="hand-container human-hand">
+      <button class="hand-button" id="human-scissors">
+        ✂️
+      </button>
+      <button class="hand-button" id="human-rock">
+        🪨
+      </button>
+      <button class="hand-button" id="human-paper">
+        📃
+      </button>
+    </div>
+    <div class="score-indicator human">
+      <h2>Score</h2>
+      <h2 class="score human">00</h2>
+    </div>
+  </body>
 </html>
