add computer side

--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <title>Rock, Paper, and Scissors | Odin</title>
   </head>
   <body>
-    <div class="human side">
-      <div class="score-container">
-        Score
-        <span>00</span>
+    <div class="computer side">
+      <div class="stats computer">
+        <h1 class="player-tag computer">COMPUTER</h1>
+        <div class="score-container">
+          Score
+          <span>00</span>
+        </div>
       </div>
+      <div class="hand-container computer">
+        <img class="computer rock hand" src="./images/rock.png" alt="">
+        <img class="computer paper hand" src="./images/paper.png" alt="">
+        <img class="computer scissors hand" src="./images/scissors.png" alt="">
+      </div>
+    </div>
+
+    <h2 class="status-indicator"></h2>
+    
+    <div class="human side">
+
       <div class="hand-container human">
         <img class="human rock hand" src="./images/rock.png" alt="">
         <img class="human paper hand" src="./images/paper.png" alt="">
