--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
         <img class="human paper hand" src="./images/paper.png" alt="">
         <img class="human scissors hand" src="./images/scissors.png" alt="">
       </div>
-      <h1>YOU</h1>
+
+      <div class="stats human">
+        <h1 class="player-tag human">YOU</h1>
+        <div class="score-container">
+          Score
+          <span>00</span>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
