--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <script src="./script.js" type="module" defer></script>
     <link rel="stylesheet" href="./style.css">
     <title>Rock, Paper, and Scissors | Odin</title>
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Schoolbell&family=Sirivennela&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="computer side">
