--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Schoolbell&family=Sirivennela&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="computer side">
-      <div class="stats computer">
-        <h1 class="player-tag computer">COMPUTER</h1>
-        <div class="score-container">
-          Score
-          <span>00</span>
-        </div>
+    <aside class="sidebar">
+      <div class="header">
+        <h1>Rock, Paper, and Scissors</h1>
+        <hr>
+        <h2>The Odin Project</h2>
       </div>
+      <div class="options">
+        <label>
+          Rounds
+          <input type="number" min="1" value="5" class="rounds-input">
+        </label>
+      </div>
+    </aside>
       <div class="hand-container computer">
         <img class="computer rock hand" src="./images/rock.png" alt="">
         <img class="computer paper hand" src="./images/paper.png" alt="">
