--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
         </label>
       </div>
     </aside>
-      <div class="hand-container computer">
-        <img class="computer rock hand" src="./images/rock.png" alt="">
-        <img class="computer paper hand" src="./images/paper.png" alt="">
-        <img class="computer scissors hand" src="./images/scissors.png" alt="">
-      </div>
-    </div>
 
-    <h2 class="status-indicator"></h2>
+    <main>
+
+      <div class="hand-container computer">
+        <img class="computer scissors hand" src="./images/scissors.png" alt="">
+        <img class="computer paper hand" src="./images/paper.png" alt="">
+        <img class="computer rock hand" src="./images/rock.png" alt="">
+      </div>
     
-    <div class="human side">
+      <h2 class="status-indicator"></h2>
+
 
       <div class="hand-container human">
         <img class="human rock hand" src="./images/rock.png" alt="">
@@ -41,14 +42,27 @@
         <img class="human scissors hand" src="./images/scissors.png" alt="">
       </div>
 
-      <div class="stats human">
-        <h1 class="player-tag human">YOU</h1>
-        <div class="score-container">
-          Score
-          <span>00</span>
-        </div>
-      </div>
+    </main>
 
-    </div>
+    <aside class="stats-container">
+      
+        <div class="stats computer">
+          <h1 class="player-tag computer">COMPUTER</h1>
+          <div class="score-container">
+            Score
+          <span>00</span>
+          </div>
+        </div>
+
+        <div class="stats human">
+          <h1 class="player-tag human">YOU</h1>
+          <div class="score-container">
+            Score
+            <span>00</span>
+          </div>
+        </div>
+
+    </aside>
+
   </body>
 </html>
