--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <aside class="sidebar">
       <div class="header">
         <h1>Rock, Paper, and Scissors</h1>
+        <h2 style="color: #C2332B">The Odin Project</h2>
         <hr>
-        <h2>The Odin Project</h2>
       </div>
       <div class="options">
         <label>
