--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="options">
         <label>
-          Rounds
+          Rounds: 
           <input type="number" min="1" value="5" class="rounds-input">
         </label>
       </div>
