add reset game button to sidebar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           Rounds: 
           <input type="number" min="1" value="5" class="rounds-input">
         </label>
+        <button class="reset">Reset Game</button>
       </div>
     </aside>
 
