nest computer side

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 
     <main>
 
-      <div class="hand-container computer">
-        <img class="computer scissors hand" src="./images/scissors.png" alt="">
-        <img class="computer paper hand" src="./images/paper.png" alt="">
-        <img class="computer rock hand" src="./images/rock.png" alt="">
+      <div class="computer side">
+        <h1 class="player-tag computer">Computer</h1>
+        <div class="hand-container computer">
+          <img class="computer scissors hand" src="./images/scissors.png" alt="">
+          <img class="computer paper hand" src="./images/paper.png" alt="">
+          <img class="computer rock hand" src="./images/rock.png" alt="">
+        </div>
       </div>
     
       <h2 class="status-indicator"></h2>
