nest human side in div

--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
       <h2 class="status-indicator"></h2>
 
 
-      <div class="hand-container human">
-        <img class="human rock hand" src="./images/rock.png" alt="">
-        <img class="human paper hand" src="./images/paper.png" alt="">
-        <img class="human scissors hand" src="./images/scissors.png" alt="">
+      <div class="human side">
+        <div class="hand-container human">
+          <img class="human rock hand" src="./images/rock.png" alt="">
+          <img class="human paper hand" src="./images/paper.png" alt="">
+          <img class="human scissors hand" src="./images/scissors.png" alt="">
+        </div>
+        <h1 class="player-tag human">Human</h1>
       </div>
 
     </main>
